# web-vanity

./: README.md  package-lock.json  package.json
rust-vanity/: Cargo.toml
rust-vanity/src/: lib.rs
src/: main.tsx
src/components/: VanityGenerator.tsx  WalletProvider.tsx
src/lib/: mint.ts  vanity.ts
src/workers/: wasm-vanity-worker.ts
