[package]
name = "rust-vanity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wee_alloc = { version = "0.4", optional = true }
five8 = "1.0"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true
